packages/pastebar-app-ui/src/styles/globals.css
/* ... */
.pulse-clip {
  animation: pulseClip 1s 1;
}

.dark .pulse-clip {
  animation: pulseClipDark 1s 1;
}

@keyframes fadeInOpacity {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes pulseClipDark {
  50% {
    opacity: 0.7;
    transform: scale(1);
  }
  60% {
    transform: scale(1.05);
    @apply bg-yellow-600;
  }
  90% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes pulseClip {
  50% {
    opacity: 0.7;
    transform: scale(1);
  }
  60% {
    transform: scale(1.05);
    @apply bg-yellow-200;
  }
  90% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes pulsePlay {
  50% {
    opacity: 0.8;
    transform: scale(0.9);
  }
}
.animate-pulse-play {
  animation: pulsePlay 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}

@layer base {
  :root {
    --player-progress-width: 0;
    --buffered-width: 0;
    --buffered-left: 0;

    --color-solid-resize-bar: rgb(226, 232, 240);

    --background: 0 0% 100%;
    --foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 47.4% 11.2%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --card: 0 0% 99.5%;
    --card-foreground: 222.2 47.4% 11.2%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 50% 50%;
    --destructive-foreground: 210 40% 98%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 217 18.41% 8.5%;
    --foreground: 213 31% 91%;

    --muted: 223 47% 11%;
    --muted-foreground: 215.4 16.3% 56.9%;

    --accent: 216 34% 17%;
    --accent-foreground: 210 40% 98%;

    --popover: 224 71% 4%;
    --popover-foreground: 215 20.2% 65.1%;

    --border: 216 34% 17%;
    --input: 216 34% 17%;

    --card: 213.91, 16.28%, 9.46%;
    --card-foreground: 213 31% 91%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 1.2%;

    --secondary: 222.2 47.4% 11.2%;
    --secondary-foreground: 210 40% 98%;

    --destructive: 0 63% 31%;
    --destructive-foreground: 210 40% 98%;

    --ring: 216 34% 17%;

    --radius: 0.5rem;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    overscroll-behavior: none;
    overflow: hidden;
    margin: 0;
    font-family:
      Inter,
      -apple-system,
      BlinkMacSystemFont,
      'Segoe UI',
      'Roboto',
      'Oxygen',
      'Ubuntu',
      'Cantarell',
      'Fira Sans',
      'Droid Sans',
      'Helvetica Neue',
      sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    /*overflow: hidden;*/
    @apply bg-background text-foreground;
    font-feature-settings:
      'rlig' 1,
      'calt' 1;
  }
}

body,
.bg-background,
[role='menubar'] {
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

code {
  /* font-family: Inter, sans-serif; */
  font-family: SourceCode, source-code-pro, ui-monospace, SFMono-Regular, 'SF Mono', Menlo,
    Monaco, Consolas, 'Courier New', monospace;
  /* font-family: ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, 'Liberation Mono', monospace; */
  font-size: 0.875rem;
}

@layer utilities {
  .step {
    counter-increment: step;
  }

  .step:before {
    @apply absolute inline-flex h-8 w-8 items-center justify-center rounded-full bg-muted text-center -indent-px text-base font-medium;
    @apply ml-[-41px];
    content: counter(step);
  }
}

/** Prevent scrolling on body when modal is open */
body[style*='pointer-events: none'] .overflow-auto,
body[style*='pointer-events: none'] .overflow-y-auto,
body[style*='pointer-events: none'] .overflow-x-auto {
  overflow: hidden !important;
}

body [type='button'] {
  -webkit-appearance: none;
}

@media (max-width: 640px) {
  .container {
    @apply px-4;
  }
}

/** Prevent scrolling on body when modal is open */
body[style*='pointer-events: none'] .overflow-auto,
body[style*='pointer-events: none'] .overflow-y-auto,
body[style*='pointer-events: none'] .overflow-x-auto {
  overflow: hidden !important;
}

@media (max-width: 640px) {
  .container {
    @apply px-4;
  }
}

.code-editor-wrapper {
  font-family: sans-serif;
  text-align: center;
}

pre.code-editor-pre {
  text-align: left;
  margin: 1em 0;
  padding: 0.5em;
  overflow: scroll;
}

pre.code-editor-pre .token-line {
  line-height: 1.3em;
  height: 1.3em;
}

.code-editor-line {
  display: table-row;
}

.code-editor-line-number {
  display: table-cell;
  text-align: right;
  padding-right: 1em;
  user-select: none;
  opacity: 0.5;
}

.code-editor-line-content {
  display: table-cell;
}

.not-active-background {
  background-size: 10px 10px;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cg fill='none' stroke='%23CCCCCC' stroke-width='0.7' %3E%3Cpath d='M0,20 L20,0 M15,25 L25,15 M-5,5 L5,-5'/%3E%3C/g%3E%3C/svg%3E");
}

.dark .not-active-background {
  background-size: 10px 10px;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cg fill='none' stroke='%23333333' stroke-width='0.7' %3E%3Cpath d='M0,20 L20,0 M15,25 L25,15 M-5,5 L5,-5'/%3E%3C/g%3E%3C/svg%3E");
}

/* On boarding init styles hidden by default */

.boarding-coutout-svg,
#boarding-popover-item {
  display: none;
}

.player-progress-bar {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
}

.player-progress-bar-volume {
  -webkit-appearance: none;
  appearance: none;
  @apply bg-gray-200 dark:bg-gray-600;
}
/* ... */

